--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-    
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <title>My Portfolio</title>
+    <title>Personal Website</title>
 </head>
 <body>
     <!--===== HEADER =====-->
@@ -160,28 +158,58 @@
         <!--===== Projects =====-->
         <section class="project section" id="project">
             <h2 class="section-title">Projects</h2>
-
+          
             <div class="work__container bd-grid">
-                <a href="" class="work__img">
-                    <img src="images/work1.png" alt="">
+              <div class="work__item">
+                <a href="https://github.com/nkvrosales/Number-Matching-Game" class="work__img">
+                  <img src="images/p1.png" alt="Number Matching Game">
+                  <div class="work__text">
+                    <h3>Number Matching Game</h3>
+                  </div>
                 </a>
-                <a href="" class="work__img">
-                    <img src="images/work1.png" alt="">
+              </div>
+              <div class="work__item">
+                <a href="https://github.com/nkvrosales/Tic-Tac-Toe" class="work__img">
+                  <img src="images/p2.png" alt="Tic-Tac-Toe">
+                  <div class="work__text">
+                    <h3>Tic-Tac-Toe</h3>
+                  </div>
                 </a>
-                <a href="" class="work__img">
-                    <img src="images/work1.png" alt="">
+              </div>
+              <div class="work__item">
+                <a href="https://github.com/nkvrosales/Calisthenics-Mobile-Application" class="work__img">
+                  <img src="images/p3.png" alt="Calisthenics Mobile Application">
+                  <div class="work__text">
+                    <h3>Calisthenics Mobile Application</h3>
+                  </div>
                 </a>
-                <a href="" class="work__img">
-                    <img src="images/work1.png" alt="">
+              </div>
+              <div class="work__item">
+                <a href="https://github.com/nkvrosales/Smoke-Detection-System" class="work__img">
+                  <img src="images/p4.PNG" alt="Smoke Detection System">
+                  <div class="work__text">
+                    <h3>Smoke Detection System</h3>
+                  </div>
                 </a>
+              </div>
+              <div class="work__item">
                 <a href="" class="work__img">
-                    <img src="images/work1.png" alt="">
+                  <img src="images/work1.png" alt="">
+                  <div class="work__text">
+                    <h3>Hello, World!</h3>
+                  </div>
                 </a>
+              </div>
+              <div class="work__item">
                 <a href="" class="work__img">
-                    <img src="images/work1.png" alt="">
+                  <img src="images/work1.png" alt="">
+                  <div class="work__text">
+                    <h3>Hello, World!</h3>
+                  </div>
                 </a>
+              </div>
             </div>
-        </section>
+          </section>
 
         <!--===== CONTACT =====-->
         <section class="contact section" id="contact">
