--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="about__container bd-grid">
                 <div>
                     <h2 class="about__subtitle">I'm Nicklaus</h2>
-                    <p class="about__text">Hello! I'm Nicklaus Karl Vergel C. Rosales, currently studying Information Technology at Mapúa Malayan Colleges Laguna. When I'm free my hobbies are gaming, I'm always up for an exciting gaming session. Additionally, I enjoy immersing myself in the world of music, exploring different genres and artists. I also love watching TV shows and movies, getting lost in captivating storylines."
+                    <p class="about__text">Hello! I'm Nicklaus Karl Vergel C. Rosales, currently studying Information Technology at Mapúa Malayan Colleges Laguna. When I'm free my hobbies are gaming, I'm always up for an exciting gaming session. Additionally, I enjoy immersing myself in music, exploring different genres and artists. I also love watching TV shows and movies, getting lost in captivating storylines.
             </div>
         </section>
 
