--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
                 </a>
               </div>
               <div class="work__item">
-                <a href="" class="work__img">
-                  <img src="images/work1.png" alt="">
+                <a href="https://github.com/nkvrosales/nkvrosales.github.io" class="work__img1">
+                  <img src="images/p5.png" alt="Personal Website">
                   <div class="work__text">
-                    <h3>Hello, World!</h3>
+                    <h3>Personal Website</h3>
                   </div>
                 </a>
               </div>
