--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>
 
                 <div class="work__item">
-                    <div class="work__img" onclick="openModal('images/p6.png', 'Larako', 'https://github.com/nkvrosales/larako')">
+                    <div class="work__img" onclick="openModal('images/p6.png', 'Larako', 'https://github.com/nkvrosales/larako', 'https://larako.netlify.app/')">
                         <img src="images/p6.png" alt="Larako">
                         <div class="work__text">
                             <h3>Larako</h3>
@@ -196,6 +196,7 @@
                 <h3 id="modalTitle">Project Title</h3>
                 <br>
                 <a id="modalGithub" href="#" target="_blank" class="button">Visit GitHub Repo</a>
+                <a id="modalWebsite" href="#" target="_blank" class="button button--ghost">View Website</a>
             </div>
         </div>
     </div>
