--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
                 </ul>
             </div>
 
-            <div class="nav__toggle" id="nav-toggle">
-                <i class='bx bx-menu'></i>
+            <div class="nav__actions">
+                <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
+                    <span class="toggle-knob">
+                        <i class='bx bx-moon' id="theme-icon"></i>
+                    </span>
+                </button>
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class='bx bx-menu'></i>
+                </div>
             </div>
         </nav>
     </header>
