--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
 
                 <div class="work__item">
                     <div class="work__img"
-                        onclick="openModal('images/p7.png', 'Larako', 'https://github.com/nkvrosales/snakegame', 'https://snakegameforlara.netlify.app/')">
-                        <img src="images/p7.png" alt="Snake for Lara">
+                        onclick="openModal('images/p7.png', 'Snake', 'https://github.com/nkvrosales/snakegame', 'https://snakegameforlara.netlify.app/')">
+                        <img src="images/p7.png" alt="Snake">
                         <div class="work__text">
                             <h3>Snake</h3>
                         </div>
