--- a/index.html
+++ b/index.html
@@ -206,6 +206,18 @@
                         </div>
                     </div>
                 </div>
+
+
+                <div class="work__item">
+                    <div class="work__img"
+                        onclick="openModal('images/p8.png', 'Notes', 'https://github.com/nkvrosales/Notes', 'https://noteslang.netlify.app/')">
+                        <img src="images/p8.png" alt="Notes">
+                        <div class="work__text">
+                            <h3>Notes</h3>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
